# utilities

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: search.js  utils.html
docs/utils/: core.html  general.html  general.md  index.md  strings.html  strings.md
docs/utils/general/: general.html
docs/utils/strings/: strings.html
src/utils/: __init__.py  general.py  strings.py
src/utils/core/: __init__.py  core.py
src/utils/general/: __init__.py  general.py
src/utils/strings/: __init__.py  strings.py
tests/: test_core.py  test_general.py  test_myfunctions.py  test_strings.py
util.egg-info/: PKG-INFO  SOURCES.txt
