[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
version = "0.0.1"
authors = [
  { name="Lydia-Rose Kesich", email="lkesich@mainevotes.net" }
]

description = "Small utility functions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/lkesich/utilities"
Documentation = "https://lkesich.github.io/utilities/"
Issues = "https://github.com/lkesich/utilities/issues"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.tox.env.typecheck]
deps = ["mypy>=1.0.0"]
commands = ["mypy src/utils"]